--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,8 @@
 
   <!-- model-viewer JavaScript library for 3D model display -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <!-- model_viewer_plus Flutter package support -->
+  <script type="module" src="./assets/packages/model_viewer_plus/assets/model-viewer.min.js" defer></script>
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
